@@ -150,7 +150,7 @@ import static picocli.CommandLine.Help.Column.Overflow.WRAP;
 public class CommandLine {
 
     /** This is picocli version {@value}. */
-    public static final String VERSION = "4.7.7-SNAPSHOT";
+    public static final String VERSION = "4.7.8-SNAPSHOT";
     private static final Tracer TRACER = new Tracer();
 
     private static final List<CommandListener> commandListeners = createCommandListeners();
@@ -1013,7 +1013,7 @@ public class CommandLine {
      * or whether such values should be rejected with a missing parameter exception.
      * The default is {@code false}, so by default input like {@code -x=subcommand} is rejected if {@code -x} is an option that takes a String parameter, and {@code subcommand} is a subcommand of this command.
      * @return {@code true} when options can have parameter values that match subcommand names or aliases, {@code false} when such values should be rejected with a missing parameter exception
-     * @since 4.7.7-SNAPSHOT
+     * @since 4.7.8-SNAPSHOT
      * @see ParserSpec#allowSubcommandsAsOptionParameters()
      */
     public boolean isAllowSubcommandsAsOptionParameters() {
@@ -1028,7 +1028,7 @@ public class CommandLine {
      * subcommands, call the setter last, after adding subcommands.</p>
      * @param newValue the new setting. When {@code true}, options can have parameter values that match subcommand names or aliases, when {@code false}, such values are rejected with a missing parameter exception
      * @return this {@code CommandLine} object, to allow method chaining
-     * @since 4.7.7-SNAPSHOT
+     * @since 4.7.8-SNAPSHOT
      * @see ParserSpec#allowSubcommandsAsOptionParameters(boolean)
      */
     public CommandLine setAllowSubcommandsAsOptionParameters(boolean newValue) {
@@ -1043,7 +1043,7 @@ public class CommandLine {
      * The default is {@code false}, so by default input like {@code -x=--some-option} is rejected if {@code -x} is an option that takes a String parameter, and {@code --some-option} is an option of this command.
      * <p>This method only considers actual options of this command, as opposed to {@link #isUnmatchedOptionsAllowedAsOptionParameters()}, which considers values that <em>resemble</em> options.</p>
      * @return {@code true} when options can have parameter values that match the name of an option in this command, {@code false} when such values should be rejected with a missing parameter exception
-     * @since 4.7.7-SNAPSHOT
+     * @since 4.7.8-SNAPSHOT
      * @see #isUnmatchedOptionsAllowedAsOptionParameters()
      * @see ParserSpec#allowOptionsAsOptionParameters()
      */
@@ -1063,7 +1063,7 @@ public class CommandLine {
      * subcommands, call the setter last, after adding subcommands.</p>
      * @param newValue the new setting. When {@code true}, options can have parameter values that match the name of an option in this command, when {@code false}, such values are rejected with a missing parameter exception
      * @return this {@code CommandLine} object, to allow method chaining
-     * @since 4.7.7-SNAPSHOT
+     * @since 4.7.8-SNAPSHOT
      * @see #setUnmatchedOptionsAllowedAsOptionParameters(boolean)
      * @see ParserSpec#allowOptionsAsOptionParameters(boolean)
      */
@@ -4780,7 +4780,7 @@ public class CommandLine {
          * Note that picocli cannot reliably detect declaration order in commands that have both {@code @Option}-annotated methods and {@code @Option}-annotated fields.
          * The default ({@code true}) is to sort alphabetically.
          * @return whether options in the synopsis should be shown in alphabetic order.
-         * @since 4.7.7-SNAPSHOT */
+         * @since 4.7.8-SNAPSHOT */
         boolean sortSynopsis() default true;
 
         /** Prefix required options with this character in the options list. The default is no marker: the synopsis
@@ -5076,7 +5076,7 @@ public class CommandLine {
      * </pre>
      *
      * The {@link #convert(String)} method of this class always throws an UnsupportedOperationException.
-     * @since 4.7.7-SNAPSHOT
+     * @since 4.7.8-SNAPSHOT
      */
     public static final class UseDefaultConverter implements ITypeConverter<Object> {
         /** Always throws UnsupportedOperationException.
@@ -6977,15 +6977,19 @@ public class CommandLine {
                 return result;
             }
 
-            /** Adds the specified {@linkplain ArgGroupSpec argument group} to the groups in this command.
+            /**
+             * Adds the specified {@linkplain ArgGroupSpec argument group} to the groups in this command.
+             *
              * @param group the group spec to add
              * @return this CommandSpec for method chaining
              * @throws InitializationException if the specified group or one of its {@linkplain ArgGroupSpec#parentGroup() ancestors} has already been added
-             * @since 4.0 */
+             * @since 4.0
+             */
             public CommandSpec addArgGroup(ArgGroupSpec group) {
-                return addArgGroup(group, new HashSet<OptionSpec>(), new HashSet<PositionalParamSpec>());
+                return addArgGroup(group, new ArrayList<OptionSpec>(), new ArrayList<PositionalParamSpec>());
             }
-            private CommandSpec addArgGroup(ArgGroupSpec group, Set<OptionSpec> groupOptions, Set<PositionalParamSpec> groupPositionals) {
+
+            private CommandSpec addArgGroup(ArgGroupSpec group, List<OptionSpec> groupOptions, List<PositionalParamSpec> groupPositionals) {
                 Assert.notNull(group, "group");
                 if (group.parentGroup() != null) {
                     throw new InitializationException("Groups that are part of another group should not be added to a command. Add only the top-level group.");
@@ -6996,14 +7000,16 @@ public class CommandLine {
                 return this;
             }
 
-            private void addGroupArgsToCommand(ArgGroupSpec group, Map<String, ArgGroupSpec> added, Set<OptionSpec> groupOptions, Set<PositionalParamSpec> groupPositionals) {
+            private void addGroupArgsToCommand(ArgGroupSpec group, Map<String, ArgGroupSpec> added, List<OptionSpec> groupOptions, List<PositionalParamSpec> groupPositionals) {
                 Map<String, OptionSpec> options = new HashMap<String, OptionSpec>();
                 for (ArgSpec arg : group.args()) {
                     if (arg.isOption()) {
                         String[] names = interpolator.interpolate(((OptionSpec) arg).names());
                         for (String name : names) {
                             ArgGroupSpec other = added.get(name);
-                            if (other == null) { continue; }
+                            if (other == null) {
+                                continue;
+                            }
                             if (other == group) {
                                 throw DuplicateOptionAnnotationsException.create(name, arg, options.get(name));
                             } else {
@@ -7019,6 +7025,7 @@ public class CommandLine {
                     add(arg);
                 }
                 for (ArgGroupSpec sub : group.subgroups()) { addGroupArgsToCommand(sub, added, groupOptions, groupPositionals); }
+                group.interpolator(interpolateVariables() ? interpolator : null);
             }
             private Set<ArgGroupSpec> flatten(Collection<ArgGroupSpec> groups, Set<ArgGroupSpec> result) {
                 for (ArgGroupSpec group : groups) { flatten(group, result); } return result;
@@ -7063,17 +7070,20 @@ public class CommandLine {
                 for (Map.Entry<String, CommandLine> entry : mixin.subcommands().entrySet()) {
                     addSubcommand(entry.getKey(), entry.getValue());
                 }
-                Set<OptionSpec> options = new LinkedHashSet<OptionSpec>(mixin.options());
-                Set<PositionalParamSpec> positionals = new LinkedHashSet<PositionalParamSpec>(mixin.positionalParameters());
+                List<OptionSpec> options = new ArrayList<OptionSpec>(mixin.options());
+                List<PositionalParamSpec> positionals = new ArrayList<PositionalParamSpec>(mixin.positionalParameters());
                 for (ArgGroupSpec argGroupSpec : mixin.argGroups()) {
-                    Set<OptionSpec> groupOptions = new HashSet<OptionSpec>();
-                    Set<PositionalParamSpec> groupPositionals = new HashSet<PositionalParamSpec>();
-                    addArgGroup(argGroupSpec, groupOptions, groupPositionals);
+                    List<OptionSpec> groupOptions = new ArrayList<OptionSpec>();
+                    List<PositionalParamSpec> groupPositionals = new ArrayList<PositionalParamSpec>();
+                    addArgGroup(argGroupSpec, groupOptions, groupPositionals); // CAUTION: adding to spec may cause OptionSpec hashCode to change
                     options.removeAll(groupOptions);
                     positionals.removeAll(groupPositionals);
                 }
-                for (OptionSpec optionSpec         : options)     { addOption(optionSpec); }
-                for (PositionalParamSpec paramSpec : positionals) { addPositional(paramSpec); }
+                for (OptionSpec optionSpec : options) {
+                    addOption(optionSpec);
+                }
+                for (PositionalParamSpec paramSpec : positionals) {
+                    addPositional(paramSpec); }
                 return this;
             }
             private void initFrom(CommandSpec spec) {
@@ -8230,7 +8240,7 @@ public class CommandLine {
             public boolean sortOptions() { return (sortOptions == null) ? DEFAULT_SORT_OPTIONS : sortOptions; }
 
             /** Returns whether the options in the synopsis should be sorted alphabetically.
-             * @since 4.7.7-SNAPSHOT */
+             * @since 4.7.8-SNAPSHOT */
             public boolean sortSynopsis() { return (sortSynopsis == null) ? DEFAULT_SORT_SYNOPSIS : sortSynopsis; }
 
             /** Returns the character used to prefix required options in the options list. */
@@ -8379,7 +8389,7 @@ public class CommandLine {
 
             /** Sets whether the options in the synopsis should be sorted alphabetically.
              * @return this UsageMessageSpec for method chaining
-             * @since 4.7.7-SNAPSHOT */
+             * @since 4.7.8-SNAPSHOT */
             public UsageMessageSpec sortSynopsis(boolean newValue) {sortSynopsis = newValue; return this;}
 
             /** Sets the character used to prefix required options in the options list.
@@ -8645,11 +8655,11 @@ public class CommandLine {
             public boolean unmatchedOptionsAllowedAsOptionParameters() { return unmatchedOptionsAllowedAsOptionParameters; }
             /**
              * @see CommandLine#isAllowSubcommandsAsOptionParameters()
-             * @since 4.7.7-SNAPSHOT */
+             * @since 4.7.8-SNAPSHOT */
             public boolean allowSubcommandsAsOptionParameters() { return allowSubcommandsAsOptionParameters; }
             /**
              * @see CommandLine#isAllowOptionsAsOptionParameters()
-             * @since 4.7.7-SNAPSHOT */
+             * @since 4.7.8-SNAPSHOT */
             public boolean allowOptionsAsOptionParameters() { return allowOptionsAsOptionParameters; }
             private boolean splitFirst()                       { return limitSplit(); }
             /** Returns true if arguments should be split first before any further processing and the number of
@@ -8709,11 +8719,11 @@ public class CommandLine {
             public ParserSpec unmatchedOptionsArePositionalParams(boolean unmatchedOptionsArePositionalParams) { this.unmatchedOptionsArePositionalParams = unmatchedOptionsArePositionalParams; return this; }
             /**
              * @see CommandLine#setAllowSubcommandsAsOptionParameters(boolean)
-             * @since 4.7.7-SNAPSHOT */
+             * @since 4.7.8-SNAPSHOT */
             public ParserSpec allowSubcommandsAsOptionParameters(boolean allowSubcommandsAsOptionParameters) { this.allowSubcommandsAsOptionParameters = allowSubcommandsAsOptionParameters; return this; }
             /**
              * @see CommandLine#setAllowOptionsAsOptionParameters(boolean)
-             * @since 4.7.7-SNAPSHOT */
+             * @since 4.7.8-SNAPSHOT */
             public ParserSpec allowOptionsAsOptionParameters(boolean allowOptionsAsOptionParameters) { this.allowOptionsAsOptionParameters = allowOptionsAsOptionParameters; return this; }
             /** Sets whether exceptions during parsing should be collected instead of thrown.
              * Multiple errors may be encountered during parsing. These can be obtained from {@link ParseResult#errors()}.
@@ -8931,7 +8941,7 @@ public class CommandLine {
             }
 
             /** Returns the original value of the option's required attribute, regardless of whether the option is used in an exclusive group or not.
-             * @since 4.7.7-SNAPSHOT
+             * @since 4.7.8-SNAPSHOT
              * @see Option#required() */
             public boolean originallyRequired(){
                 return originallyRequired;
@@ -10430,6 +10440,7 @@ public class CommandLine {
             private final List<ArgGroupSpec> subgroups;
             private final Set<ArgSpec> args;
             private Messages messages;
+            private Interpolator interpolator;
             private ArgGroupSpec parentGroup;
             private String id = "1";
             private final List<IAnnotatedElement> specElements;
@@ -10514,10 +10525,12 @@ public class CommandLine {
             /** Returns the heading of this group (may be {@code null}), used when generating the usage documentation.
              * @see ArgGroup#heading() */
             public String heading()  {
-                if (messages() == null) { return heading; }
-                String newValue = messages().getString(headingKey(), null);
-                if (newValue != null) { return newValue; }
-                return heading;
+                String result = heading;
+                if (messages() != null) {
+                    String newValue = messages().getString(headingKey(), null);
+                    if (newValue != null) { result = newValue; }
+                }
+                return interpolator != null ? interpolator.interpolate(result) : result;
             }
 
             /** Returns the heading key of this group (may be {@code null}), used to get the heading from a resource bundle.
@@ -10746,6 +10759,12 @@ public class CommandLine {
             public ArgGroupSpec messages(Messages msgs) {
                 messages = msgs;
                 for (ArgGroupSpec sub : subgroups()) { sub.messages(msgs); }
+                return this;
+            }
+
+            private ArgGroupSpec interpolator(Interpolator interpoltr) {
+                this.interpolator = interpoltr;
+                for (ArgGroupSpec sub : subgroups()) { sub.interpolator(interpoltr); }
                 return this;
             }
 
@@ -11133,7 +11152,7 @@ public class CommandLine {
             final int paramIndex;
             final String name;
             int position;
-
+            @SuppressWarnings("deprecation") // AccessibleObject() in AccessibleObject has been deprecated
             public MethodParam(Method method, int paramIndex) {
                 this.method = method;
                 this.paramIndex = paramIndex;
@@ -11724,7 +11743,7 @@ public class CommandLine {
              * classpath and thereby cause failures. This method allows for disabling
              * loading of resource bundles during annotation processing, preventing such
              * errors.
-             * @since 4.7.7-SNAPSHOT
+             * @since 4.7.8-SNAPSHOT
              * @param loadBundles true if bundles should be loaded (default), false if bundles should not be loaded
              */
             public static final void setLoadBundles(boolean loadBundles) {
@@ -14295,14 +14314,18 @@ public class CommandLine {
                         if (argSpec.isOption() && !empty(((OptionSpec) argSpec).fallbackValue())) {
                             defaultValue = !booleanValue(argSpec, ((OptionSpec) argSpec).fallbackValue()); // #754 Allow boolean options to get value from fallback instead of defaultProvider
                         }
-                        // don't process cmdline arg: it's okay to ignore value if not attached to option
-                        Boolean oppositeValue = commandSpec.parser().toggleBooleanFlags()
+                        if (!parseResultBuilder.isInitializingDefaultValues) {
+                            // don't process cmdline arg: it's okay to ignore value if not attached to option
+                            Boolean oppositeValue = commandSpec.parser().toggleBooleanFlags()
                                 ? (Boolean) argSpec.getValue() // #147 toggle existing boolean value
                                 : defaultValue; // #712 flip the default value
-                        if (oppositeValue == null) { oppositeValue = false; }
-                        actualValue = String.valueOf(!oppositeValue);
-                        if (argSpec.isOption() && ((OptionSpec) argSpec).negatable() && negated) {
-                            actualValue = String.valueOf(oppositeValue);
+                            if (oppositeValue == null) {
+                                oppositeValue = false;
+                            }
+                            actualValue = String.valueOf(!oppositeValue);
+                            if (argSpec.isOption() && ((OptionSpec) argSpec).negatable() && negated) {
+                                actualValue = String.valueOf(oppositeValue);
+                            }
                         }
                         optionalValueExists = false;
                         consumed = 0;
@@ -14386,6 +14409,9 @@ public class CommandLine {
             if (tracer.isInfo()) { tracer.info(traceMessage, argSpec.toString(), String.valueOf(oldValue), displayVal, argDescription, argSpec.scopeString()); }
             int pos = getPosition(argSpec);
             argSpec.setValue(newValue);
+            if (argSpec.group() != null && !parseResultBuilder.isInitializingDefaultValues && argSpec.valueIsDefaultValue) { // #2349 bugfix for ArgGroup / Set / default value
+                argSpec.valueIsDefaultValue = false;
+            }
             parseResultBuilder.addOriginalStringValue(argSpec, actualValue);// #279 track empty string value if no command line argument was consumed
             parseResultBuilder.addStringValue(argSpec, actualValue);
             parseResultBuilder.addTypedValues(argSpec, pos, newValue);
@@ -14402,10 +14428,12 @@ public class CommandLine {
             if (argSpec.auxiliaryTypes().length < 2) { throw new ParameterException(CommandLine.this, argSpec.toString() + " needs two types (one for the map key, one for the value) but only has " + argSpec.auxiliaryTypes().length + " types configured.",argSpec, null); }
             Map<Object, Object> map = argSpec.getValue();
             Tracer tracer = CommandLine.tracer();
-            if (map == null || !initialized.contains(argSpec)) {
+            boolean shouldReset = argSpec.group() != null && !parseResultBuilder.isInitializingDefaultValues && argSpec.valueIsDefaultValue; // #2349 bugfix for ArgGroup / Set / default value
+            if (map == null || !initialized.contains(argSpec) || shouldReset) {
                 tracer.debug("Initializing binding for %s on %s with empty %s", optionDescription("", argSpec, 0), argSpec.scopeString(), argSpec.type().getSimpleName());
                 map = createMap(argSpec.type()); // map class
                 argSpec.setValue(map);
+                argSpec.valueIsDefaultValue = false;
             }
             addToInitialized(argSpec, initialized);
             int originalSize = map.size();
@@ -14588,7 +14616,8 @@ public class CommandLine {
             int pos = getPosition(argSpec);
             List<Object> converted = consumeArguments(argSpec, negated, lookBehind, alreadyUnquoted, alreadyUnquoted, arity, args, argDescription);
             List<Object> newValues = new ArrayList<Object>();
-            if (initialized.contains(argSpec)) { // existing values are default values if initialized does NOT contain argsSpec
+            boolean shouldReset = argSpec.group() != null && !parseResultBuilder.isInitializingDefaultValues && argSpec.valueIsDefaultValue; // #2349 bugfix for ArgGroup / Set / default value
+            if (initialized.contains(argSpec) || shouldReset) { // existing values are default values if initialized does NOT contain argsSpec
                 for (int i = 0; i < length; i++) {
                     newValues.add(Array.get(existing, i)); // keep non-default values
                 }
@@ -14606,6 +14635,9 @@ public class CommandLine {
                 Array.set(array, i, newValues.get(i));
             }
             argSpec.setValue(array);
+            if (shouldReset) {
+                argSpec.valueIsDefaultValue = false;
+            }
             parseResultBuilder.add(argSpec, pos);
             return converted.size(); // return how many args were consumed
         }
@@ -14621,10 +14653,12 @@ public class CommandLine {
             Collection<Object> collection = argSpec.getValue();
             int pos = getPosition(argSpec);
             List<Object> converted = consumeArguments(argSpec, negated, lookBehind, alreadyUnquoted, alreadyUnquoted, arity, args, argDescription);
-            if (collection == null ||  !initialized.contains(argSpec))  {
+            boolean shouldReset = argSpec.group() != null && !parseResultBuilder.isInitializingDefaultValues && argSpec.valueIsDefaultValue; // #2349 bugfix for ArgGroup / Set / default value
+            if (collection == null ||  !initialized.contains(argSpec) || shouldReset)  {
                 tracer().debug("Initializing binding for %s on %s with empty %s", optionDescription("", argSpec, 0), argSpec.scopeString(), argSpec.type().getSimpleName());
                 collection = createCollection(argSpec.type(), argSpec.auxiliaryTypes()); // collection type, element type
                 argSpec.setValue(collection);
+                argSpec.valueIsDefaultValue = false;
             }
             addToInitialized(argSpec, initialized);
             for (Object element : converted) {
@@ -15225,7 +15259,7 @@ public class CommandLine {
             public File convert(String value) { return new File(value); }
         }
         static class URLConverter implements ITypeConverter<URL> {
-            public URL convert(String value) throws MalformedURLException { return new URL(value); }
+            public URL convert(String value) throws MalformedURLException, URISyntaxException { return new URI(value).toURL(); }
         }
         static class URIConverter implements ITypeConverter<URI> {
             public URI convert(String value) throws URISyntaxException { return new URI(value); }
@@ -18477,7 +18511,7 @@ public class CommandLine {
     }
 
     /** Enumerates over the trace level values for filtering which internal debug statements should be printed.
-     * @since 4.7.7-SNAPSHOT */
+     * @since 4.7.8-SNAPSHOT */
     public enum TraceLevel { OFF, WARN, INFO, DEBUG;
         /** Returns whether messages at the specified {@code other} trace level would be printed for the current trace level. */
         public boolean isEnabled(TraceLevel other) { return ordinal() >= other.ordinal(); }
@@ -18490,7 +18524,7 @@ public class CommandLine {
 
     /** Utility class for printing internal debug statements.
      * @see CommandLine#tracer()
-     * @since 4.7.7-SNAPSHOT */
+     * @since 4.7.8-SNAPSHOT */
     public static final class Tracer {
         private PrintStream stream = System.err;
         private TraceLevel level = TraceLevel.lookup(System.getProperty("picocli.trace"));
@@ -18533,7 +18567,7 @@ public class CommandLine {
     }
     /** Returns the {@code Tracer} used internally for printing internal debug statements.
      * @return the {@code Tracer} used internally for printing internal debug statements
-     * @since 4.7.7-SNAPSHOT */
+     * @since 4.7.8-SNAPSHOT */
     public static Tracer tracer() {
         // TRACER is a static variable.
         // Refresh to pick up changes to the system property after the CommandLine class was loaded.
